Added /data/** to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,8 @@ Desktop.ini
 # Bower Components
 ######################
 /src/main/webapp/bower_components/**
+
+######################
+# ElasticSearch
+######################
+/data/**
