break the Cassandra docker compose files into 3 files according to jhipster/generator-jhipster#3288

--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -11,5 +11,5 @@ services:
             - 8080:8080
     tatami-cassandra:
         extends:
-            file: cassandra.yml
+            file: cassandra-cluster.yml
             service: tatami-cassandra
