declare environment variables in docker-compose file

--- a/src/main/docker/cassandra.yml
+++ b/src/main/docker/cassandra.yml
@@ -22,6 +22,9 @@ services:
         container_name: tatami-cassandra-migration
         links:
             - tatami-cassandra
+        environment:
+            - KEYSPACE_NAME=TatamiJHipster
+            - CASSANDRA_CONTACT_POINT=tatami-cassandra
         build:
             context: .
             dockerfile: cassandra/Cassandra-AutoMigration.Dockerfile
