Dev build uses embedded elasticsearch, and production will use a elasticsearch instance

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -25,12 +25,12 @@ spring:
             compression: LZ4
             keyspaceName: TatamiJHipster
         elasticsearch:
-            cluster-name: elasticsearch_kenny
-            cluster-nodes: localhost:9300
-#            properties:
-#                path:
-#                  logs: target/elasticsearch/log
-#                  data: target/elasticsearch/data
+            cluster-name:
+            cluster-nodes:
+            properties:
+                path:
+                  logs: target/elasticsearch/log
+                  data: target/elasticsearch/data
     mail:
         host: localhost
     messages:
