Added angular-marked to bower.json

--- a/mobile/bower.json
+++ b/mobile/bower.json
@@ -3,6 +3,7 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.0",
-    "angular-mocks": "1.4.3"
+    "angular-mocks": "1.4.3",
+    "angular-marked": "~1.0.1"
   }
 }
