--- a/mobile/bower.json
+++ b/mobile/bower.json
@@ -2,8 +2,10 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.2.0",
+    "ionic": "~1.2.4",
     "angular-mocks": "1.4.3",
-    "angular-marked": "~1.0.1"
+    "angular-marked": "~1.0.1",
+    "angular-animate": "~1.5.3",
+    "angular-sanitize": "~1.5.3"
   }
 }
