--- a/mobile/bower.json
+++ b/mobile/bower.json
@@ -6,6 +6,7 @@
     "angular-mocks": "1.4.3",
     "angular-marked": "~1.0.1",
     "angular-animate": "~1.5.3",
-    "angular-sanitize": "~1.5.3"
+    "angular-sanitize": "~1.5.3",
+    "angular-resource": "~1.5.3"
   }
 }
