--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "angular-i18n": "1.4.8",
     "angular-local-storage": "0.2.3",
     "angular-loading-bar": "0.8.0",
-    "angular-moment": "0.10.0",
+    "angular-moment": "0.10.3",
     "angular-resource": "1.4.8",
     "angular-sanitize": "1.4.8",
     "angular-translate": "2.8.1",
@@ -29,7 +29,7 @@
     "ngInfiniteScroll": "1.2.1",
     "swagger-ui": "2.1.3",
     "ngToast": "ngtoast#~1.5.6",
-    "angular-moment": "0.10.3"
+    "openlayers": "release-2.13.1"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
