--- a/mobile/bower.json
+++ b/mobile/bower.json
@@ -8,6 +8,10 @@
     "angular-animate": "~1.5.3",
     "angular-sanitize": "~1.5.3",
     "angular-resource": "~1.5.3",
-    "ngCordova": "~0.1.24-alpha"
+    "ngCordova": "~0.1.24-alpha",
+    "angular-translate": "~2.11.0",
+    "angular-translate-interpolation-messageformat": "~2.11.0",
+    "angular-translate-loader-partial": "~2.11.0",
+    "messageformat": "~0.3.1"
   }
 }
