--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -64,3 +64,6 @@ jhipster:
         contact:
         license:
         licenseUrl:
+    google:
+        clientId: 80711898729-i0g8s21vok281jq6rnrvvk95796cfgji.apps.googleusercontent.com
+        clientSecret: Yhbo5nYdX8iYz_8ieJ3xb3bx
