--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "angular-i18n": "1.4.8",
     "angular-local-storage": "0.2.3",
     "angular-loading-bar": "0.8.0",
-    "angular-moment": "0.10.0",
+    "angular-moment": "0.10.3",
     "angular-resource": "1.4.8",
     "angular-sanitize": "1.4.8",
     "angular-translate": "2.8.1",
@@ -28,8 +28,7 @@
     "ng-file-upload": "12.0.0",
     "ngInfiniteScroll": "1.2.1",
     "swagger-ui": "2.1.3",
-    "ngToast": "ngtoast#~1.5.6",
-    "angular-moment": "0.10.3"
+    "ngToast": "ngtoast#~1.5.6"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
@@ -47,6 +46,7 @@
   "resolutions": {
     "angular": "1.4.8",
     "angular-cookies": "1.4.8",
-    "jquery": "2.1.4"
+    "jquery": "2.1.4",
+    "ng-file-upload": "~12.0.4"
   }
 }
