Add camera plugin

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -40,7 +40,8 @@
     {
       "locator": "https://github.com/apache/cordova-plugin-whitelist.git",
       "id": "cordova-plugin-whitelist"
-    }
+    },
+    "cordova-plugin-file-transfer"
   ],
   "cordovaPlatforms": [
     "android",
