--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
-    "angular-scenario": "1.4.8"
+    "angular-scenario": "1.4.8",
+    "angular-ui-tour": "~0.5.4"
   },
   "overrides": {
     "bootstrap": {
