--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
     "swagger-ui": "2.1.3",
     "ngToast": "ngtoast#~1.5.6",
     "openlayers": "release-2.13.1",
-    "angular-ui-tour": "^0.5.3"
+    "angular-ui-tour": "~0.5.4"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
