--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -68,3 +68,5 @@ jhipster:
         clientId: 80711898729-i0g8s21vok281jq6rnrvvk95796cfgji.apps.googleusercontent.com
         clientSecret: Yhbo5nYdX8iYz_8ieJ3xb3bx
         callbackURI: http://localhost:8080/tatami/callback?client_name=Google2Client
+    tatami:
+        admins: jdubois@ippon.fr,julien.dubois@gmail.com,vdebelil@ippon.fr,ggruel@ippon.fr,snomis@ippon.fr,rlheritier@ippon.fr,tlebrun@ippon.fr
