--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "TatamiJHipster",
+  "name": "tatami-jhipster",
   "version": "0.0.0",
   "appPath": "src/main/webapp",
   "testPath": "src/test/javascript/spec",
@@ -48,7 +48,6 @@
   "resolutions": {
     "angular": "1.4.8",
     "angular-cookies": "1.4.8",
-    "jquery": "2.1.4",
-    "ng-file-upload": "~12.0.4"
+    "jquery": "2.1.4"
   }
 }
