--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "ngToast": "ngtoast#~1.5.6",
     "angular-ui-tour": "~0.5.4",
     "angular-material": "^1.0.9"
+    "ment.io": "^0.9.24"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
