--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "ngInfiniteScroll": "1.2.1",
     "swagger-ui": "2.1.3",
     "ngToast": "ngtoast#~1.5.6",
-    "angular-ui-tour": "~0.5.4"
+    "angular-ui-tour": "~0.5.4",
+    "angular-material": "^1.0.9"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
