--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
     "swagger-ui": "2.1.3",
     "ngToast": "ngtoast#~1.5.6",
     "angular-ui-tour": "~0.5.4",
-    "angular-material": "^1.0.9"
+    "angular-material": "^1.0.9",
     "ment.io": "^0.9.24"
   },
   "devDependencies": {
