--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   "testPath": "src/test/javascript/spec",
   "dependencies": {
     "angular": "1.4.8",
+    "angular-animate": "1.4.8",
     "angular-aria": "1.4.8",
     "angular-bootstrap": "1.2.5",
     "angular-cache-buster": "0.4.3",
