--- a/pom.xml
+++ b/pom.xml
@@ -495,6 +495,7 @@
                             <filtering>true</filtering>
                             <includes>
                                 <include>index.html</include>
+                                <include>dist/index.html</include>
                             </includes>
                         </resource>
                     </webResources>
