Fixed elasticsearch error in prod profile

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -25,8 +25,8 @@ spring:
             compression: LZ4
             keyspaceName: TatamiJHipster
         elasticsearch:
-            cluster-name: elasticsearch
-            cluster-nodes: localhost:9300
+            cluster-name:
+            cluster-nodes:
     mail:
         host: localhost
         port: 25
